# gmail-mcp-assistant

./: .gitignore  README.md  pyproject.toml  server.py
